# BearBonesECS

./: CMakeLists.txt  LICENSE  README.md
examples/: main.cpp
include/: bearBonesECS.hpp
tests/: test.cpp  testScene.scn  testScene.txt
